refactor(skywars): modernise registry getters with Stream.toList() + Comparator
Both SkywarsPerkRegistry and SkywarsKitRegistry exposed query
methods that collected into a mutable ArrayList via
Collectors.toList(). Two sort-helper methods then mutated that
returned list in place, which made the getters racy if anything
else read the returned reference.

Switched all eight query methods to .toList() so they return
immutable lists, and rewrote the four sort variants to use
Stream.sorted with a hoisted Comparator (Comparator.comparingInt /
.thenComparing for the owned-first case) returning a fresh
immutable list. Drop the unused Collectors import in both files.